// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log out 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fixed font-ver z-50"
      >
        <button
          aria-label="fab"
          class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
        >
          <img
            src="menu.svg"
            width="24"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fixed font-ver z-50"
    >
      <button
        aria-label="fab"
        class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
      >
        <img
          src="menu.svg"
          width="24"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`log out 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fixed font-ver z-50"
      >
        <button
          aria-label="fab"
          class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
        >
          <img
            src="close.svg"
            width="24"
          />
        </button>
        <button
          class="shadow-2xl  rounded-full bg-indigo-500 w-10 h-10 flex justify-center items-center  fixed top-24 right-7 "
        >
          <img
            src="pencil.svg"
            width="20"
          />
        </button>
        <button
          class="shadow-2xl rounded-full bg-indigo-500 w-10 h-10 flex justify-center items-center fixed top-20 right-20"
        >
          <img
            src="information.svg"
            width="20"
          />
        </button>
        <button
          aria-label="logout"
          class="shadow-2xl rounded-full bg-indigo-500 w-10 h-10 flex justify-center items-center fixed top-7 right-24"
        >
          <img
            src="signout.svg"
            width="20"
          />
        </button>
      </div>
    </div>
    <div>
      <div
        class="fixed font-ver z-50"
      >
        <button
          aria-label="fab"
          class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
        >
          <img
            src="menu.svg"
            width="24"
          />
        </button>
      </div>
    </div>
    <div>
      <div
        class="fixed font-ver z-50"
      >
        <button
          aria-label="fab"
          class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
        >
          <img
            src="menu.svg"
            width="24"
          />
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fixed font-ver z-50"
    >
      <button
        aria-label="fab"
        class="shadow-2xl rounded-full bg-indigo-500 w-12 h-12 flex justify-center items-center fixed top-6 right-6"
      >
        <img
          src="menu.svg"
          width="24"
        />
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
